--- a/pom.xml
+++ b/pom.xml
@@ -35,4 +35,12 @@
         </plugins>
     </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>net.sf.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>2.3</version>
+        </dependency>
+    </dependencies>
+
 </project>
