--- a/pom.xml
+++ b/pom.xml
@@ -22,10 +22,10 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>ru.otus.java_homework.Test</mainClass>
+                            <mainClass>ru.otus.lottery.Main</mainClass>
                         </manifest>
                     </archive>
-                    <finalName>${project.name}_${java.version}_${os.name}</finalName>
+                    <finalName>${project.name}</finalName>
                     <appendAssemblyId>false</appendAssemblyId>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
@@ -40,6 +40,11 @@
             <groupId>net.sf.opencsv</groupId>
             <artifactId>opencsv</artifactId>
             <version>2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
         </dependency>
     </dependencies>
 
