--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <name>L1.2</name>
+    <name>L3.1</name>
 
     <groupId>ru.otus</groupId>
     <artifactId>java_homework</artifactId>
@@ -22,7 +22,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>ru.otus.homework.homework2.ObjectMeasuring</mainClass>
+                            <mainClass>ru.otus.homework.homework3.TestMyArrayList</mainClass>
                         </manifest>
                     </archive>
                     <finalName>${project.name}</finalName>
