--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>homework4</module>
         <module>homework8</module>
         <module>homework9</module>
+        <module>homework11</module>
     </modules>
 
 </project>
