--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>homework8</module>
         <module>homework9</module>
         <module>homework11</module>
+        <module>homework12</module>
     </modules>
 
 </project>
