--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>homework9</module>
         <module>homework11</module>
         <module>homework12</module>
+        <module>homework14</module>
     </modules>
 
 </project>
