--- a/homework14/pom.xml
+++ b/homework14/pom.xml
@@ -26,7 +26,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>ru.otus.homework.main.Main</mainClass>
+                            <mainClass>ru.otus.homework.Main</mainClass>
                         </manifest>
                     </archive>
                     <finalName>${project.name}</finalName>
