--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>homework2</module>
         <module>homework3</module>
         <module>homework4</module>
+        <module>homework5</module>
         <module>homework8</module>
         <module>homework9</module>
         <module>homework11</module>
