--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>homework9</module>
         <module>homework11</module>
         <module>homework12</module>
+        <module>homework13</module>
         <module>homework14</module>
     </modules>
 
