--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>homework3</module>
         <module>homework4</module>
         <module>homework5</module>
+        <module>homework7</module>
         <module>homework8</module>
         <module>homework9</module>
         <module>homework11</module>
