--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>homework12</module>
         <module>homework13</module>
         <module>homework14</module>
+        <module>homework15</module>
     </modules>
 
 </project>
